# dota2-turbo

./: .dockerignore  .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose-local.yml  docker-compose-prod.yml  pyproject.toml  requirements.txt
compose/local/: Dockerfile
compose/prod/django/: Dockerfile  entrypoint  start
compose/prod/nginx/: Dockerfile  default.conf
config/: celery.py  settings.py  urls.py
config/settings/: base.py  dev.py  local.py  prod.py
dota2_turbo/authentication/: admin.py  apps.py  models.py  pipeline.py  urls.py  views.py
dota2_turbo/authentication/feeds/: users.csv
dota2_turbo/authentication/migrations/: 0001_initial.py  0002_steamuser_steam_friends_and_more.py
dota2_turbo/authentication/services/: parse_players.py
dota2_turbo/hero/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
dota2_turbo/hero/feeds/: facets.json  heroes.json
dota2_turbo/hero/migrations/: 0001_initial.py  0002_alter_herotier_period.py
dota2_turbo/hero/services/: update_heroes_facets.py  update_heroes_stats.py
dota2_turbo/hero/templates/: heroes.html
dota2_turbo/leaderboard/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
dota2_turbo/leaderboard/api/: serializers.py  views.py
dota2_turbo/leaderboard/migrations/: 0001_initial.py
dota2_turbo/leaderboard/services/: remove_low_rating_users.py  (+2 more)
dota2_turbo/player/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
dota2_turbo/static/: styles.css
dota2_turbo/templates/: base.html
requirements/: local.txt  prod.txt
(+45 files in other folders)
