[project]
name = "dota2-turbo"
version = "1.0"
description = "turbodota.xyz 2.0 version"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.0",
    "django==5.2.7",
    "django-celery-beat>=2.8.1",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "social-auth-app-django>=5.6.0",
]
