[project]
name = "dota2-turbo"
version = "1.0"
description = "turbodota.xyz 2.0 version"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.6.0",
    "django==5.2.7",
    "django-celery-beat>=2.8.1",
    "django-debug-toolbar>=6.1.0",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "selenium>=4.40.0",
    "social-auth-app-django>=5.6.0",
    "webdriver-manager>=4.0.2",
]
